--- a/model.ipynb
+++ b/model.ipynb
@@ -3286,7 +3286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "9632bbf4-51cf-4343-818c-8afbbdd456e6",
    "metadata": {},
    "outputs": [
@@ -3313,9 +3313,7 @@
        "      <th></th>\n",
        "      <th>Logistic Regression</th>\n",
        "      <th>Decision Tree</th>\n",
-       "      <th>Random Forest</th>\n",
        "      <th>Ada Boost</th>\n",
-       "      <th>Gradient Boost</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3323,93 +3321,67 @@
        "      <th>Accuracy Score</th>\n",
        "      <td>0.803015</td>\n",
        "      <td>0.931134</td>\n",
-       "      <td>0.923394</td>\n",
        "      <td>0.906390</td>\n",
-       "      <td>0.936773</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Precision Score</th>\n",
        "      <td>0.826341</td>\n",
        "      <td>0.955863</td>\n",
-       "      <td>0.950278</td>\n",
        "      <td>0.941691</td>\n",
-       "      <td>0.958045</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Recall Score</th>\n",
        "      <td>0.948222</td>\n",
        "      <td>0.956394</td>\n",
-       "      <td>0.952190</td>\n",
        "      <td>0.938829</td>\n",
-       "      <td>0.961527</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>F1 Score</th>\n",
        "      <td>0.883096</td>\n",
        "      <td>0.956129</td>\n",
-       "      <td>0.951233</td>\n",
        "      <td>0.940258</td>\n",
-       "      <td>0.959783</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>True Positive</th>\n",
        "      <td>68345.000000</td>\n",
        "      <td>68934.000000</td>\n",
-       "      <td>68631.000000</td>\n",
        "      <td>67668.000000</td>\n",
-       "      <td>69304.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>True Negative</th>\n",
        "      <td>5420.000000</td>\n",
        "      <td>16600.000000</td>\n",
-       "      <td>16192.000000</td>\n",
        "      <td>15593.000000</td>\n",
-       "      <td>16748.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>False Positive</th>\n",
        "      <td>14363.000000</td>\n",
        "      <td>3183.000000</td>\n",
-       "      <td>3591.000000</td>\n",
        "      <td>4190.000000</td>\n",
-       "      <td>3035.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>False Negative</th>\n",
        "      <td>3732.000000</td>\n",
        "      <td>3143.000000</td>\n",
-       "      <td>3446.000000</td>\n",
        "      <td>4409.000000</td>\n",
-       "      <td>2773.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 Logistic Regression  Decision Tree  Random Forest  \\\n",
-       "Accuracy Score              0.803015       0.931134       0.923394   \n",
-       "Precision Score             0.826341       0.955863       0.950278   \n",
-       "Recall Score                0.948222       0.956394       0.952190   \n",
-       "F1 Score                    0.883096       0.956129       0.951233   \n",
-       "True Positive           68345.000000   68934.000000   68631.000000   \n",
-       "True Negative            5420.000000   16600.000000   16192.000000   \n",
-       "False Positive          14363.000000    3183.000000    3591.000000   \n",
-       "False Negative           3732.000000    3143.000000    3446.000000   \n",
-       "\n",
-       "                    Ada Boost  Gradient Boost  \n",
-       "Accuracy Score       0.906390        0.936773  \n",
-       "Precision Score      0.941691        0.958045  \n",
-       "Recall Score         0.938829        0.961527  \n",
-       "F1 Score             0.940258        0.959783  \n",
-       "True Positive    67668.000000    69304.000000  \n",
-       "True Negative    15593.000000    16748.000000  \n",
-       "False Positive    4190.000000     3035.000000  \n",
-       "False Negative    4409.000000     2773.000000  "
+       "                 Logistic Regression  Decision Tree     Ada Boost\n",
+       "Accuracy Score              0.803015       0.931134      0.906390\n",
+       "Precision Score             0.826341       0.955863      0.941691\n",
+       "Recall Score                0.948222       0.956394      0.938829\n",
+       "F1 Score                    0.883096       0.956129      0.940258\n",
+       "True Positive           68345.000000   68934.000000  67668.000000\n",
+       "True Negative            5420.000000   16600.000000  15593.000000\n",
+       "False Positive          14363.000000    3183.000000   4190.000000\n",
+       "False Negative           3732.000000    3143.000000   4409.000000"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3418,16 +3390,14 @@
     "modelComparation = pd.DataFrame({\n",
     "    \"Logistic Regression\": [accuracy_score(y_test, logreg_pred),precision_score(y_test, logreg_pred),recall_score(y_test, logreg_pred),f1_score(y_test, logreg_pred), tplogreg, tnlogreg, fplogreg, fnlogreg],\n",
     "    \"Decision Tree\": [accuracy_score(y_test, dtc_pred),precision_score(y_test, dtc_pred),recall_score(y_test, dtc_pred),f1_score(y_test, dtc_pred), tpdtc, tndtc, fpdtc, fndtc],\n",
-    "    \"Random Forest\": [accuracy_score(y_test, rfc_pred),precision_score(y_test, rfc_pred),recall_score(y_test, rfc_pred),f1_score(y_test, rfc_pred), tprfc, tnrfc, fprfc, fnrfc],\n",
     "    \"Ada Boost\": [accuracy_score(y_test, abc_pred),precision_score(y_test, abc_pred),recall_score(y_test, abc_pred),f1_score(y_test, abc_pred), tpabc, tnabc, fpabc, fnabc],\n",
-    "    \"Gradient Boost\": [accuracy_score(y_test, gbc_pred),precision_score(y_test, gbc_pred),recall_score(y_test, gbc_pred),f1_score(y_test, gbc_pred), tpgbc, tngbc, fpgbc, fngbc],\n",
     "}, index=['Accuracy Score', 'Precision Score', 'Recall Score', 'F1 Score', 'True Positive', 'True Negative', 'False Positive', 'False Negative'])\n",
     "modelComparation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "9b495c1b-f1e8-42a2-ba4b-6cf76cadb453",
    "metadata": {},
    "outputs": [
@@ -3508,17 +3478,7 @@
     "plt.legend(loc='lower right')\n",
     "plt.show()\n",
     "\n",
-    "plt.subplot(223)\n",
-    "plt.title('ROC Random Forest')\n",
-    "plt.plot(fpr_rfc, tpr_rfc, 'red', label='AUC Random Forest = {}'.format(round(roc_auc_rfc,4)))\n",
-    "plt.plot([0,1], [0,1], 'r--')\n",
-    "plt.xlim([0,1])\n",
-    "plt.ylim([0,1])\n",
-    "plt.xlabel('False Positive Rate')\n",
-    "plt.ylabel('True Positive Rate')\n",
-    "plt.fill_between(fpr_rfc, tpr_rfc, 0, facecolor='pink', alpha=1)\n",
-    "plt.legend(loc='lower right')\n",
-    "plt.show()\n",
+    "\n",
     "\n",
     "plt.subplot(224)\n",
     "plt.title('ROC Ada Boost')\n",
@@ -3531,19 +3491,7 @@
     "plt.fill_between(fpr_abc, tpr_abc, 0, facecolor='azure', alpha=1)\n",
     "plt.legend(loc='lower right')\n",
     "plt.show()\n",
-    "\n",
-    "plt.figure(figsize=(16,10))\n",
-    "plt.subplot(221)\n",
-    "plt.title('ROC Gradient Boost')\n",
-    "plt.plot(fpr_gbc, tpr_gbc, 'red', label='AUC Gradient Boost = {}'.format(round(roc_auc_gbc,4)))\n",
-    "plt.plot([0,1], [0,1], 'r--')\n",
-    "plt.xlim([0,1])\n",
-    "plt.ylim([0,1])\n",
-    "plt.xlabel('False Positive Rate')\n",
-    "plt.ylabel('True Positive Rate')\n",
-    "plt.fill_between(fpr_gbc, tpr_gbc, 0, facecolor='pink', alpha=1)\n",
-    "plt.legend(loc='lower right')\n",
-    "plt.show()"
+    "\n"
    ]
   },
   {
