--- a/Data_cleaning.ipynb
+++ b/Data_cleaning.ipynb
@@ -1,9 +1,59 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e052b109-c0c6-414a-9cdc-a7bb8c6450a5",
+   "metadata": {},
+   "source": [
+    "The dataset is from the U.S. Small Business Administration (SBA)\n",
+    "\n",
+    "The U.S. SBA was founded in 1953 on the principle of promoting and assisting small enterprises in the U.S. credit market (SBA Overview and History, US Small Business Administration (2015)). Small businesses have been a primary source of job creation in the United States; therefore, fostering small business formation and growth has social benefits by creating job opportunities and reducing unemployment.\n",
+    "\n",
+    "There have been many success stories of start-ups receiving SBA loan guarantees such as FedEx and Apple Computer. However, there have also been stories of small businesses and/or start-ups that have defaulted on their SBA-guaranteed loans.\n",
+    "\n",
+    "In this final project, I will build a model whether the loan is approved or not based on the given term and loan condition."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a23e16f1-6dde-4467-b224-0afeb57afc65",
+   "metadata": {},
+   "source": [
+    "Columns\n",
+    "\n",
+    "LoanNr_ChkDgt : Identifier\n",
+    "Name : Borrower Name\n",
+    "City : Borrower City\n",
+    "State : Borrower State\n",
+    "Zip : Borrower Zip Code\n",
+    "Bank : Bank Name\n",
+    "BankState : Bank State\n",
+    "NAICS : North American industry classification system code.\n",
+    "ApprovalDate : Date SBA commitment issued\n",
+    "ApprovalFY : Fiscal year of commitment\n",
+    "Term : Loan term in months\n",
+    "NoEmp : Number of Business Employees\n",
+    "NewExist : 1 = Existing business, 2 = New business\n",
+    "CreateJob : Number of Jobs Created\n",
+    "RetainedJob : Number of jobs retained\n",
+    "FranchiseCode : Franchise code, (00000 or 00001) = No franchise\n",
+    "UrbanRural : 1 = Urban, 2 = rural, 0 = undefined\n",
+    "RevLineCr : Revolving line of credit: Y = Yes, N = No\n",
+    "LowDoc : LowDoc Loan Program: Y = Yes, N = No\n",
+    "ChgOffDate : The date when a loan is declared to be in default\n",
+    "DisbursementDate : Disbursement date\n",
+    "DisbursementGross : Amount disbursed\n",
+    "BalanceGross : Gross amount outstanding\n",
+    "MIS_Status : Loan status charged off = CHGOFF, Paid in full = PIF\n",
+    "ChgOffPrinGr : Charged-off amount\n",
+    "GrAppv : Gross amount of loan approved by bank\n",
+    "SBA_Appv : SBA's guaranteed amount of approved loan"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a3f19105-e288-474b-a184-720668e06404",
+   "execution_count": null,
+   "id": "dd67df69-3b55-429a-ba46-29894ba093b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1931,6 +1981,37 @@
    ],
    "source": [
     "data[data['NAICS']==0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21ebdf31-c336-42da-acae-ab573f2cd98e",
+   "metadata": {},
+   "source": [
+    "Because machine learning algorithm use numerical data for considering the model. We need to do feature engineeing to modifiy the feature for modeling.\n",
+    "\n",
+    "NAICS\n",
+    "\n",
+    "11 : Agriculture, forestry, fishing and hunting\n",
+    "21 : Mining, quarrying, and oil and gas extraction\n",
+    "22 : Utilities\n",
+    "23 : Construction\n",
+    "31-33 : Manufacturing\n",
+    "42 : Wholesale trade\n",
+    "44-45 : Retail trade\n",
+    "48-49 : Transportation and warehousing\n",
+    "51 : Information\n",
+    "52 : Finance and insurance\n",
+    "53 : Real estate and rental and leasing\n",
+    "54 : Professional, scientific, and technical services\n",
+    "55 : Management of companies and enterprises\n",
+    "56 : Administrative/support & waste management/remediation Service\n",
+    "61 : Educational services\n",
+    "62 : Health care and social assistance\n",
+    "71 : Arts, entertainment, and recreation\n",
+    "72 : Accommodation and food services\n",
+    "81 : Other services (except public administration)\n",
+    "92 : Public administration"
    ]
   },
   {
