--- a/Data_cleaning.ipynb
+++ b/Data_cleaning.ipynb
@@ -977,6 +977,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a9453f8f-ce5a-4854-aba0-94a51d4d215a",
+   "metadata": {},
+   "source": [
+    "1. Feature Selection\n",
+    "After conducting exploratory data analysis, the next step is to do a feature selection by analyzing the correlation between all features and target features.\n",
+    "\n",
+    "Target Feature (Y)\n",
+    "The feature that will be labeled as the target is the MIS_Status feature. Where in this feature explains which borrower cannot repay loans.\n",
+    "\n",
+    "Train Feature (X)\n",
+    "1. Personal & Institusion Information Feature\n",
+    "\n",
+    "From SBA Data Frame we can make a conclusion that there are seven column that give personal and instituion information\n",
+    "\n",
+    "LoanNr_ChkDgt as borrower Identifeir\n",
+    "Name as Borrower Name\n",
+    "City as Borrower City\n",
+    "State as Borrower State\n",
+    "Zip as Borrower Zip Code\n",
+    "Bank as Bank Name\n",
+    "BankState as Bank State\n",
+    "FranchiseCode as FranchiseCode\n",
+    "UrbanRural as information about business\n",
+    "This information is used only to identify the borrower and the Bank. With that reason we not use this feature for future modeling.\n",
+    "\n",
+    "2. NAICS (North American industry classification system code)\n",
+    "\n",
+    "NAICS is a classification system of several types of industries registered in America. The first two digits of NAICS explained the type of business industries.\n",
+    "\n",
+    "NAICS itself has the potential for decision making. The type of industry will affect the company's performance in business. So that this feature will be used later in the model.\n",
+    "\n",
+    "3. Date and Time Feature\n",
+    "\n",
+    "It's dataset contained some feature that explains the date of commitment and disbursement.\n",
+    "\n",
+    "ApprovalDate : Date SBA commitment issued\n",
+    "ApprovalFY : Fiscal year of commitment\n",
+    "ChgOffDate : The date when a loan is declared to be in default\n",
+    "DisbursementDate : Disbursement date\n",
+    "Because the model will be deployed following the operating time of the Bank, this feature is used only for additional information and not for modeling.\n",
+    "\n",
+    "4. Term\n",
+    "\n",
+    "The term provides information on how long the loan will take. Concerning the rules of risk management, the longer the duration, the greater the uncertainty that will lead to risk. So this feature will be used as a reference for modeling.\n",
+    "\n",
+    "5. Jobs Columns\n",
+    "\n",
+    "This feature explains how many employees are in the related business and how many jobs were created and existed before.\n",
+    "\n",
+    "In this dataset there are three features: NoEmp, CreateJob dan RetainedJob"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "89a38d96-5c34-45d5-aefc-88cc47a1b22a",
